# windows-fs-minifilter-rust

./: README.md
bindgen/: Cargo.toml  README.md
bindgen/src/: main.rs
filter/: Cargo.toml
filter/include/: fltmgr.sys
filter/src/: bindings.rs  lib.rs
scanner/: Cargo.toml  build.rs  ntoskrnl.lib
scanner/.cargo/: config
scanner/src/: bindings.rs  cleanup.rs  create.rs  fs_control.rs  lib.rs  logger.rs  port.rs  write.rs
user/: Cargo.toml
user/src/: main.rs
