cargo-features = ["per-package-target"]

[package]
name = "user"
version = "0.1.0"
edition = "2021"
default-target = "x86_64-pc-windows-gnu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

windows = { version = "0.54.0", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_InstallableFileSystems",
  "Win32_System_IO",
  "Win32_System_Threading",
]}
